--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,15 @@
     <meta name="description" content="Solve fun programming problems and earn clout in the community" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Newsreader:wght@400;800&display=swap" rel="stylesheet">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-DDSZ3ZQ01Q"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'G-DDSZ3ZQ01Q');
+	</script>
     <title>Katas in your language</title>
   </head>
   <body>
